@@ -26,6 +26,7 @@ SVN
     Windows
 
     * Fixed cosmetic issue with work/current.xyz using / instead of \.
+    * Migrated configuration folder to %APPDATA% to improve behaviour in Vista.
 
     Linux
 
